--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~8.1.2",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "angular-image-slider": "0.0.9",
+    "angular-ng-autocomplete": "^1.1.14",
     "angular2-moment": "^1.9.0",
     "bootstrap": "^4.4.0",
     "hammerjs": "^2.0.8",
@@ -45,6 +46,7 @@
     "@angular/cli": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
+    "@fortawesome/fontawesome-free": "^5.12.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.31",
