--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.1.0",
+    "@angular-material-extensions/google-maps-autocomplete": "^2.0.0",
     "@angular/animations": "~8.1.2",
     "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.1.2",
@@ -33,6 +35,7 @@
     "ng2-rating": "0.0.7",
     "ngx-chips": "^2.0.2",
     "ngx-owl-carousel": "^2.0.7",
+    "ngx-print": "^1.2.0-beta.3",
     "ngx-rating": "0.0.9",
     "ngx-slick-carousel": "^0.4.6",
     "rxjs": "~6.4.0",
